--- a/.github/workflows/diocesis-schedule.yml
+++ b/.github/workflows/diocesis-schedule.yml
@@ -3,7 +3,8 @@ name: diocesis-dios-hoy
 on:
   schedule:
     - cron: "3 6-11 * * *" 
-    - cron: "3/5 * * * *"
+    - cron: "3 20 * * *"
+    # - cron: "3/5 * * * *"
   workflow_dispatch:
 
 jobs:
