--- a/.github/workflows/diocesis-schedule.yml
+++ b/.github/workflows/diocesis-schedule.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: "3 6-11 * * *" 
     - cron: "3 20 * * *"
+    - cron: "7 15 * * *"
     # - cron: "3/5 * * * *"
   workflow_dispatch:
 
