--- a/.github/workflows/diocesis-schedule.yml
+++ b/.github/workflows/diocesis-schedule.yml
@@ -2,7 +2,8 @@ name: diocesis-dios-hoy
 
 on:
   schedule:
-    - cron: "3 6-11 * * *" 
+    - cron: "7 6-12 * * *"
+    # - cron: "12 13 * * *" 
   workflow_dispatch:
 
 jobs:
@@ -19,6 +20,8 @@ jobs:
       DIOCESIS_LOG_LEVEL: INFO
       DIOCESIS_VIDEO_WIDTH: "840"
       DIOCESIS_VIDEO_HEIGHT: "472"
+      DIOCESIS_EVANGELIO_TIMEOUT: "60"
+      DIOCESIS_EVANGELIO_RETRIES: "1"
       DIOCESIS_PAGE_LOAD_TIMEOUT: "180"
       DIOCESIS_GET_RETRIES: "3"
       DIOCESIS_GET_RETRY_WAIT: "5"
