--- a/.github/workflows/diocesis-schedule.yml
+++ b/.github/workflows/diocesis-schedule.yml
@@ -22,6 +22,8 @@ jobs:
       DIOCESIS_VIDEO_HEIGHT: "472"
       DIOCESIS_EVANGELIO_TIMEOUT: "60"
       DIOCESIS_EVANGELIO_RETRIES: "1"
+      DIOCESIS_LOGIN_TIMEOUT: "60"
+      DIOCESIS_EVANGELIO_URL: "https://admin.diocesisdeneiva.org/espiritualidad/dios-hoy/evangelios-y-santo/evangelium"
       DIOCESIS_PAGE_LOAD_TIMEOUT: "180"
       DIOCESIS_GET_RETRIES: "3"
       DIOCESIS_GET_RETRY_WAIT: "5"
